# glyph

./: .gitignore  pyproject.toml
scripts/: dev.sh  test_glyph.sh  test_glyph_ai.sh  test_glyph_ai_edges.sh  test_glyph_db.sh  test_glyph_db_edges.sh  test_glyph_git.sh  test_glyph_make.sh  test_glyph_plan.sh
src/glyph/: __main__.py  app.py  db.py  doctor.py  gitvc.py  graph.py  ids.py  intel.py  io.py  libclang_loader.py  llm_pack.py  mkparse.py  plan.py  planner.py  rewriter.py  summary.py  tree_agent.py
