[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-ai"
version = "0.0.1"
dependencies = ["typer>=0.12"]

[project.scripts]
glyph = "glyph.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
